@@ -2,7 +2,7 @@
 //
 // Class for reading INI configuration files.
 //
-// (C) Copyright 2013,2016 Fred Gleason <fredg@paravelsystems.com>
+// (C) Copyright 2013-2024 Fred Gleason <fredg@paravelsystems.com>
 //
 //    This program is free software; you can redistribute it and/or modify
 //    it under the terms of version 2.1 of the GNU Lesser General Public
@@ -22,49 +22,12 @@
 #ifndef SYPROFILE_H
 #define SYPROFILE_H
 
-#include <vector>
-
 #include <QHostAddress>
+#include <QList>
+#include <QMap>
 #include <QString>
 #include <QStringList>
 #include <QTime>
-
-class ProfileLine
-{
- public:
-  ProfileLine();
-  QString tag() const;
-  void setTag(QString tag);
-  QString value() const;
-  void setValue(QString value);
-  bool used() const;
-  void setUsed(bool state);
-  void clear();
-
- private:
-  QString line_tag;
-  QString line_value;
-  bool line_used;
-};
-
-
-class ProfileSection
-{
- public:
-  ProfileSection();
-  QString name() const;
-  void setName(QString name);
-  bool getValue(QString tag,QString *value) const;
-  void setValueUsed(QString tag,bool state);
-  void addValue(QString tag,QString value);
-  void clear();
-  QStringList unusedLines() const;
-
- private:
-  QString section_name;
-  std::vector<ProfileLine> section_line;
-};
-
 
 class Profile
 {
@@ -72,16 +35,15 @@ class Profile
   Profile();
   QStringList sectionNames() const;
   QString source() const;
-  bool setSource(const QString &filename);
-  bool setSource(std::vector<QString> *values);
+  bool setSource(const QString &filename,QString *err_msg=NULL);
+  //  bool setSource(std::vector<QString> *values);
+  bool setSource(const QStringList &values);
   QString stringValue(const QString &section,const QString &tag,
 		      const QString &default_value="",bool *ok=0);
   int intValue(const QString &section,const QString &tag,
 	       int default_value=0,bool *ok=0);
   int hexValue(const QString &section,const QString &tag,
 	       int default_value=0,bool *ok=0);
-  float floatValue(const QString &section,const QString &tag,
-		   float default_value=0.0,bool *ok=0);
   double doubleValue(const QString &section,const QString &tag,
 		    double default_value=0.0,bool *ok=0);
   bool boolValue(const QString &section,const QString &tag,
@@ -94,12 +56,11 @@ class Profile
   QHostAddress addressValue(const QString &section,const QString &tag,
 			    const QString &default_value="",bool *ok=0);
   void clear();
-  QStringList unusedLines() const;
-  static QString version();
 
  private:
+  void ProcessBlock(const QString &name,const QMap<QString,QString> &lines);
   QString profile_source;
-  std::vector<ProfileSection> profile_section;
+  QMap<QString,QMap<QString,QString> > d_blocks;
 };
 
 
