@@ -1,2 +1,5 @@
 2024-10-20 Fred Gleason <fredg@paravelsystems.com>
 	* Initial package creation
+2024-10-22 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored 'Profile'.
+	* Added tests for 'Profile' using data from QStringList.
